--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
         <h1>Hello world</h1>
-        <p>I am Hosted with GitHub Pages.</p>
+        <p>I'm Hosted with GitHub Pages.</p>
     
 </body>
 </html>
